--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,15 @@
 
-body{background-color: rgba(76, 10, 182, 0.774);}
+body{background-color: rgba(5, 3, 110, 0.87);}
 h1{color: antiquewhite;}
 h2{color: antiquewhite;}
 p{color: antiquewhite;}
-div{background-color: rgba(98, 0, 255, 0.932);}
+div{background-color: rgb(68, 0, 255);}
 li{color: aliceblue;}
-footer{background-color: rgb(86, 37, 163);}
+footer{background-color: grey;}
 footer{text-align: center;}
-img{width: 237px;}
-img{height: 229px;}
-img{top: 116px;}
-body{font: 1em sans-serif;}
+img{width: 200px;}
+img{margin-left: 0%;}
+body{font: 1em ascendant-serif;}
+h1 {margin-left: 40px;}
+p{margin-left: 40px;}
+section{margin: 40px;}
