--- a/style.scss
+++ b/style.scss
@@ -6,9 +6,11 @@ body{
     
 }
 header{
-    margin: 30px;
+    margin-left: 30px;
+    margin-bottom: 10px;
     color: antiquewhite;
 }
+
 img{
     width: 237;
     height: 229px;
@@ -18,7 +20,8 @@ img{
    
 }
 main{
-    margin: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
     color: antiquewhite;
 }
 footer{
@@ -32,6 +35,6 @@ div{
     background-color: rgb(44, 9, 202);
     }
 p{
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 a{color: antiquewhite;}
