--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 }
 
 header {
-  margin: 30px;
+  margin-left: 30px;
+  margin-bottom: 10px;
   color: antiquewhite;
 }
 
@@ -22,7 +23,8 @@ img {
 }
 
 main {
-  margin: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
   color: antiquewhite;
 }
 
@@ -39,7 +41,7 @@ div {
 }
 
 p {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 a {
