limpando códigos e embelezando 1

--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ body {
   background-color: rgb(66, 12, 214);
   font-style: oblique;
   font-family: Verdana, Tahoma, sans-serif;
+  color: antiquewhite;
 }
 
 header {
   margin-left: 30px;
   margin-bottom: 10px;
-  color: antiquewhite;
 }
 
 img {
@@ -25,19 +25,20 @@ img {
 main {
   margin-left: 30px;
   margin-right: 30px;
-  color: antiquewhite;
 }
 
 footer {
   background-color: gray;
   margin: 0;
   text-align: center;
+  color: black;
 }
 
 div {
   margin-bottom: 15px;
-  margin-top: 10px;
+  margin-top: 20px;
   background-color: rgb(44, 9, 202);
+  border-radius: 10px;
 }
 
 p {
@@ -46,4 +47,6 @@ p {
 
 a {
   color: antiquewhite;
+  background-color: rgb(44, 9, 202);
+  border-radius: 10px;
 }/*# sourceMappingURL=style.css.map */
