--- a/style.scss
+++ b/style.scss
@@ -3,12 +3,11 @@ body{
     background-color: rgb(66, 12, 214);
     font-style: oblique;
     font-family: Verdana, Tahoma, sans-serif;
-    
+    color: antiquewhite;  
 }
 header{
     margin-left: 30px;
     margin-bottom: 10px;
-    color: antiquewhite;
 }
 
 img{
@@ -16,25 +15,29 @@ img{
     height: 229px;
     top: 116px;
     left: 120px;
-    border-radius: 100%;
-   
+    border-radius: 100%;   
 }
 main{
     margin-left: 30px;
-    margin-right: 30px;
-    color: antiquewhite;
+    margin-right: 30px;    
 }
 footer{
     background-color: gray;
     margin: 0;
     text-align: center;
+    color: black;
 }
 div{
     margin-bottom: 15px;
-    margin-top: 10px;
+    margin-top: 20px;
     background-color: rgb(44, 9, 202);
-    }
+    border-radius: 10px;
+}
 p{
     margin-bottom: 15px;
 }
-a{color: antiquewhite;}
+a{
+    color: antiquewhite;
+    background-color: rgb(44, 9, 202);
+    border-radius: 10px;
+}
