--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,17 @@
-* {margin: 0;}
+* {
+    margin: 0;
+    letter-spacing: 2px;
+}
+// variaveis de cor
+$cor-primaria: rgba(6, 6, 172, 0.904);
+$cor-secundaria: rgba(128, 0, 128, 0.486);
+$cor-rodape: grey;
+
+
 body{
-    background-color: rgb(66, 12, 214);
+    background-color: $cor-primaria;
     font-style: oblique;
-    font-family: Verdana, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: antiquewhite;  
 }
 header{
@@ -15,22 +24,24 @@ img{
     height: 229px;
     top: 116px;
     left: 120px;
-    border-radius: 100%;   
-}
+    border-radius: 50%;   
+    border-color: green;
+    background: linear-gradient(to right, rgb(131, 247, 54), rgb(13, 211, 13), rgb(3, 114, 3));}
 main{
     margin-left: 30px;
     margin-right: 30px;    
 }
-footer{
-    background-color: gray;
+footer{    
+    background-color: $cor-rodape;
     margin: 0;
     text-align: center;
     color: black;
+    padding: 20px;
 }
 div{
     margin-bottom: 15px;
     margin-top: 20px;
-    background-color: rgb(44, 9, 202);
+    background-color: $cor-secundaria;
     border-radius: 10px;
 }
 p{
@@ -38,6 +49,6 @@ p{
 }
 a{
     color: antiquewhite;
-    background-color: rgb(44, 9, 202);
+    background-color: $cor-secundaria;
     border-radius: 10px;
 }
