--- a/style.css
+++ b/style.css
@@ -31,11 +31,12 @@ main {
 }
 
 footer {
+  display: flex;
+  justify-content: center;
   background-color: grey;
-  margin: 0;
-  text-align: center;
   color: black;
-  padding: 10px;
+  padding: 15px;
+  margin-top: 40px;
 }
 
 div {
