--- a/style.scss
+++ b/style.scss
@@ -1,53 +1,64 @@
 * {
     margin: 0;
     letter-spacing: 2px;
+    
 }
+
 // variaveis de cor
 $cor-primaria: rgba(6, 6, 172, 0.904);
 $cor-secundaria: rgba(128, 0, 128, 0.486);
 $cor-rodape: grey;
 
 
-body{
+body {
     background-color: $cor-primaria;
     font-style: oblique;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: antiquewhite;  
+    color: antiquewhite;
 }
-header{
+
+header {
     margin-left: 30px;
     margin-bottom: 10px;
 }
 
-img{
+img {
     width: 237;
     height: 229px;
     top: 116px;
     left: 120px;
-    border-radius: 50%;   
+    border-radius: 50%;
     border-color: green;
-    background: linear-gradient(to right, rgb(131, 247, 54), rgb(13, 211, 13), rgb(3, 114, 3));}
-main{
+    background: linear-gradient(to right, rgb(131, 247, 54), rgb(13, 211, 13), rgb(3, 114, 3));
+}
+
+main {
     margin-left: 30px;
-    margin-right: 30px;    
+    margin-right: 30px;
 }
-footer{    
-    background-color: $cor-rodape;
-    margin: 0;
-    text-align: center;
-    color: black;
-    padding: 10px;
+
+footer {
+   display: flex;
+   justify-content: center;
+   background-color: $cor-rodape;
+   color: black;
+   padding: 15px;
+   margin-top: 40px;
+   
 }
-div{
+
+div {
     margin-bottom: 15px;
     margin-top: 20px;
     background-color: $cor-secundaria;
     border-radius: 10px;
 }
-p{
+
+p {
     margin-bottom: 15px;
 }
-a{
+
+a {
     color: antiquewhite;
     background-color: $cor-secundaria;
     border-radius: 10px;
