--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ img {
   height: 229px;
   top: 116px;
   left: 120px;
+  margin-top: 50px;
   border-radius: 50%;
   border-color: green;
   background: linear-gradient(to right, rgb(131, 247, 54), rgb(13, 211, 13), rgb(3, 114, 3));
@@ -28,6 +29,7 @@ img {
 main {
   margin-left: 30px;
   margin-right: 30px;
+  height: 60vh;
 }
 
 footer {
@@ -36,7 +38,6 @@ footer {
   background-color: grey;
   color: black;
   padding: 15px;
-  margin-top: 40px;
 }
 
 div {
